--- a/Princial.html
+++ b/Princial.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div class="encabezado clearfix">
+        <div class="encabezado">
             <h1>TusCursos.com</h1>
             <a href="javascript:;">Log in</a>
         </div>
@@ -24,9 +24,53 @@
         </ul>
         </div>
     </header>
+    
+    <div class="container">
+    <aside>
+        <h2>Cursos ofertados</h2>
+        <p>&gt;Lenguajes</p>
+        <ul>
+            <li>JAVA</li>
+            <li>C++/C#</li>
+            <li>Python</li>
+        </ul>
+        <p>&gt;Front-End</p>
+        <ul>
+            <li>HTML5</li>
+            <li>CSS3</li>
+            <li>JAVASCRIPT</li>
+            <li>BootStrap4</li>
+        </ul>
+        <p>&gt;Back-End</p>
+        <ul>
+            <li>PHP 5</li>
+            <li>Symphony</li>
+            <li>Laravel</li>
+            <li>Node.js</li>
+        </ul>
+    </aside>
+
     <main>
+        <div class="contenedor1">
+        <div class="imagen1">
+            <h2>En poco tiempo serás un gran profesional</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora architecto repudiandae aliquid fugit vel dolore odio corrupti, consequuntur, id perferendis praesentium debitis officia recusandae nemo consequatur ad? Omnis, quae ad.</p>
+        </div>
+        <div class="separador"></div>
+        </div>
+
+        <div class="contenedor2">
+            <h2>Descubre nuestros cursos más demandados</h2>
+            
+            <div class="inferior">
+            <div class="fondo"><div class="imagen21"></div></div>
+            <div class="fondo"><div class="imagen22"></div></div>
+            <div class="fondo"><div class="imagen23"></div></div>
+            </div>
+        </div>
 
     </main>
+    </div>
     <footer>
 
     </footer>
